--- a/templates/profile.html
+++ b/templates/profile.html
@@ -180,6 +180,6 @@
   <script src="{% static 'js/components/Header.js' %}"></script>
 
   <script src="{% static 'js/api/Api.js' %}"></script>
-  <script src="{% static 'authorRecipe.js' %}"></script>
+  <script src="{% static 'js/authorRecipe.js' %}"></script>
 </body>
 </html>
