--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Французские тосты</title>
+    <title>{{ object.title }}</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'pages/single.css' %}">
 </head>
@@ -30,10 +30,10 @@
 </header>
     <main class="main container">
         <div class="single-card" data-id="371" data-author="12">
-            <img src="{% static 'images/testCardImg.png' %}" alt="какой-то текст" class="single-card__image">
+            <img src="{{ object.image.url }}" alt="{{ object.title }}" class="single-card__image">
             <div class="single-card__info">
                 <div class="single-card__header-info">
-                    <h1 class="single-card__title">Французские тосты</h1>
+                    <h1 class="single-card__title">{{ object.title }}</h1>
                     <div class="single-card__favorite">
                         <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
                         <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
@@ -47,8 +47,8 @@
                 <div class="single-card__items single-card__items_column">
                     <p class="single-card__text"><span class="icon-time"></span> 20 мин.</p>
                     <ul class="single-card__items">
-                        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span> Вероника Чернова</p></li>
-                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="#" class="single-card__text">Редактировать рецепт</a></li>
+                        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ object.author.get_full_name }}</p></li>
+                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="/recipes/id/{{ object.id }}/edit" class="single-card__text">Редактировать рецепт</a></li>
                     </ul>
                 </div>
                 <ul class="single-card__items">
@@ -58,19 +58,16 @@
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Ингридиенты:</h3>
                     <div class="single-card__items single-card__items_column">
-                        <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                        <p class=" single-card__section-item">Молоко - 200 мл.</p>
-                        <p class=" single-card__section-item">Тосты - 4 шт.</p>
-                        <p class=" single-card__section-item">Сахар 2 сл.л.</p>
-                        <p class=" single-card__section-item">Яйцо - 2 шт.</p>
-                        <p class=" single-card__section-item">Молоко - 200 мл.</p>
+                        {% for ingredientinrecipe in object.ingredientinrecipe_set.all %}
+                        <p class=" single-card__section-item">{{ ingredientinrecipe.ingredient.title }} {{ ingredientinrecipe.quantity }} {{ ingredientinrecipe.ingredient.dimension_unit }}</p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Описание:</h3>
-                    <p class=" single-card__section-text">Смешать молоко с сахаром, добавить яйца, тщательно все взбить.
-                        Обмакнуть тосты в смесь и жарить на сливочном масле до золотистой корочки.</p>
-                    <p class=" single-card__section-text">Полить сверху сиропом топинамбура и украсить ягодами.</p>
+                    {% for section in object.description.splitlines %}
+                    <p class=" single-card__section-text">{{ section }}</p>
+                    {% endfor %}
                 </div>
             </div>
         </div>
