--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 {% block main_header %}{% include 'includes/tags.html' %}{% endblock %}
 
 {% block main_content %}
-  {% include 'includes/card_list.html' %}
+  {% include 'includes/recipe_card_list.html' %}
   {% include 'includes/paginator.html' %}
 {% endblock %}
 
