--- a/templates/includes/author_card_list.html
+++ b/templates/includes/author_card_list.html
@@ -1,6 +1,6 @@
 <div class="card-list">
-  {% for object in page_obj %}
-      {% include 'includes/card.html' %}
+  {% for author in page_obj %}
+      {% include 'includes/author_card.html' %}
   {% empty %}
     <div>Данный список пуст.</div>
   {% endfor %}
