--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -8,7 +8,7 @@
       {% endif %}
       {% for q in paginator.page_range %}
         {% if q == page_obj.number %}
-          <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="?page={{ q }}">{{ q }}</a></li>
+          <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="#">{{ q }}</a></li>
         {% else %}
           <li class="pagination__item"><a class="pagination__link link" href="?page={{ q }}">{{ q }}</a></li>
         {% endif %}
