--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -1,96 +1,63 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ object.title }}</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'pages/single.css' %}">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item nav__item_active"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+{% extends 'base.html' %}
 
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
-    <main class="main container">
-        <div class="single-card" data-id="371" data-author="12">
-            <img src="{{ object.image.url }}" alt="{{ object.title }}" class="single-card__image">
-            <div class="single-card__info">
-                <div class="single-card__header-info">
-                    <h1 class="single-card__title">{{ object.title }}</h1>
-                    <div class="single-card__favorite">
-                        <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
-                        <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
-                    </div>
-                </div>
-                <ul class="single-card__items">
-                    <li class="single-card__item"><span class="badge badge_style_green">Обед</span></li>
-                    <li class="single-card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-                    <li class="single-card__item"><span class="badge badge_style_purple">Ужин</span></li>
-                </ul>
-                <div class="single-card__items single-card__items_column">
-                    <p class="single-card__text"><span class="icon-time"></span> 20 мин.</p>
-                    <ul class="single-card__items">
-                        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ object.author.get_full_name }}</p></li>
-                        <li class="single-card__item">  <a style="margin-left: 2.5em" href="/recipes/id/{{ object.id }}/edit" class="single-card__text">Редактировать рецепт</a></li>
-                    </ul>
-                </div>
-                <ul class="single-card__items">
-                    <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
-                </ul>
-                <div class="single-card__section">
-                    <h3 class="single-card__section-title">Ингридиенты:</h3>
-                    <div class="single-card__items single-card__items_column">
-                        {% for ingredientinrecipe in object.ingredientinrecipe_set.all %}
-                        <p class=" single-card__section-item">{{ ingredientinrecipe.ingredient.title }} {{ ingredientinrecipe.quantity }} {{ ingredientinrecipe.ingredient.dimension_unit }}</p>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="single-card__section">
-                    <h3 class="single-card__section-title">Описание:</h3>
-                    {% for section in object.description.splitlines %}
-                    <p class=" single-card__section-text">{{ section }}</p>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="footer__container container">
-            <a href="#" class="footer__brand link">Продуктовый помощник</a>
-            <ul class="footer__items">
-                <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-                <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-            </ul>
-        </div>
-    </footer>
-<script src="{% static 'js/components/Purchases.js' %}"></script>
-<script src="{% static 'js/components/Favorites.js' %}"></script>
-<script src="{% static 'js/components/Subscribe.js' %}"></script>
-<script src="{% static 'js/config/config.js' %}"></script>
+{% block title %}{{ object.title }}{% endblock %}
+{% block stylesheet %}{% load static %}{% static 'pages/single.css' %}{% endblock %}
 
-<script src="{% static 'js/components/MainCards.js' %}"></script>
-<script src="{% static 'js/components/SingleCard.js' %}"></script>
-<script src="{% static 'js/components/Header.js' %}"></script>
+{% block main_content %}
+<div class="single-card" data-id="371" data-author="12">
+  <img src="{{ object.image.url }}" alt="{{ object.title }}" class="single-card__image">
+  <div class="single-card__info">
+    <div class="single-card__header-info">
+      <h1 class="single-card__title">{{ object.title }}</h1>
+      <div class="single-card__favorite">
+        <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite icon-favorite_big"></span></button>
+        <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+      </div>
+    </div>
+    <ul class="single-card__items">
+      <li class="single-card__item"><span class="badge badge_style_green">Обед</span></li>
+      <li class="single-card__item"><span class="badge badge_style_orange">Завтрак</span></li>
+      <li class="single-card__item"><span class="badge badge_style_purple">Ужин</span></li>
+    </ul>
+    <div class="single-card__items single-card__items_column">
+      <p class="single-card__text"><span class="icon-time"></span> {{ object.cooking_time_minutes }} мин.</p>
+      <ul class="single-card__items">
+        <li class="single-card__item"><p class="single-card__text"><span class="icon-user"></span>{{ object.author.get_full_name }}</p></li>
+        <li class="single-card__item">  <a style="margin-left: 2.5em" href="/recipes/id/{{ object.id }}/edit" class="single-card__text">Редактировать рецепт</a></li>
+      </ul>
+    </div>
+    <ul class="single-card__items">
+      <li class="single-card__item"><button class="button button_style_blue" name="purchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
+      <li class="single-card__item"><button class="button button_style_light-blue button_size_subscribe" name="subscribe" data-out>Подписаться на автора</button></li>
+    </ul>
+    <div class="single-card__section">
+      <h3 class="single-card__section-title">Ингридиенты:</h3>
+      <div class="single-card__items single-card__items_column">
+        {% for ingredientinrecipe in object.ingredientinrecipe_set.all %}
+          <p class=" single-card__section-item">{{ ingredientinrecipe.ingredient.title }} {{ ingredientinrecipe.quantity }} {{ ingredientinrecipe.ingredient.dimension_unit }}</p>
+        {% endfor %}
+      </div>
+    </div>
+    <div class="single-card__section">
+      <h3 class="single-card__section-title">Описание:</h3>
+      {% for section in object.description.splitlines %}
+        <p class=" single-card__section-text">{{ section }}</p>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endblock %}
 
-<script src="{% static 'js/api/Api.js' %}"></script>
-<script src="{% static 'js/singlePage.js' %}"></script>
-</body>
-</html>
+{% block sctipts %}
+  <script src="{% static 'js/components/MainCards.js' %}"></script>
+  <script src="{% static 'js/components/Purchases.js' %}"></script>
+  <script src="{% static 'js/components/Favorites.js' %}"></script>
+  <script src="{% static 'js/components/Subscribe.js' %}"></script>
+  <script src="{% static 'js/components/SingleCard.js' %}"></script>
+  <script src="{% static 'js/config/config.js' %}"></script>
+  <script src="{% static 'js/components/CardList.js' %}"></script>
+  <script src="{% static 'js/components/Header.js' %}"></script>
+  <script src="{% static 'js/api/Api.js' %}"></script>
+  <script src="{% static 'js/singlePage.js' %}"></script>
+  <script src="{% static 'js/favorite.js' %}"></script>
+{% endblock %}
