Recipe create form

--- a/templates/favourite_recipes.html
+++ b/templates/favourite_recipes.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 
-{% block sctipts %}
+{% block scripts %}
   <script src="{% static 'js/components/MainCards.js' %}"></script>
   <script src="{% static 'js/components/Purchases.js' %}"></script>
   <script src="{% static 'js/components/Favorites.js' %}"></script>
