--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -9,7 +9,7 @@
   {% include 'includes/paginator.html' %}
 {% endblock %}
 
-{% block sctipts %}
+{% block scripts %}
   <script src="{% static 'js/components/MainCards.js' %}"></script>
   <script src="{% static 'js/components/Purchases.js' %}"></script>
   <script src="{% static 'js/config/config.js' %}"></script>
