--- a/templates/recipe_create.html
+++ b/templates/recipe_create.html
@@ -1,43 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Создание рецепта</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
-</head>
-<body class="body">
-<header class="header">
-    <nav class="nav">
-        <div class="nav__container container">
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Мои подписки</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Создать рецепт</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter"></span></li>
+{% extends 'base.html' %}
 
-            </ul>
-            <ul class="nav__items list">
-                <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
-                <li class="nav__item"><a href="#" class="nav__link link">Выход</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
-<main class="main container">
-    <div class="main__header">
-        <h1 class="main__title">Создание рецепта</h1>
-    </div>
+{% block title %}Создание рецепта{% endblock %}
+{% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
+{% block main_title %}Создание рецепта{% endblock %}
+
+{% block main_content %}
     <div class="form-container">
-        <form class="form" method="post" enctype="multipart/form-data">
+        <form class="form" method="post" enctype="multipart/form-data">{% csrf_token %}
             <div class="form__group">
                 <label for="id_name" class="form__label">Название рецепта</label>
                 <div class="form__field-group">
-                    <input type="text" id="id_name" name="name" class="form__input">
+                    <input type="text" id="id_name" name="title" class="form__input">
                     <span class="form__error"></span>
                 </div>
             </div>
@@ -45,18 +18,12 @@
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
-                        <div class="tags__item">
-                            <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
-                            <label for="id_breakfast" class="tags__label">Завтрак</label>
-                        </div>
-                        <div class="tags__item">
-                            <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
-                            <label for="id_lunch" class="tags__label">Обед</label>
-                        </div>
-                        <div class="tags__item">
-                            <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
-                            <label for="id_dinner" class="tags__label">Ужин</label>
-                        </div>
+                        {% for tag, title in form.tags.field.choices %}
+                            <div class="tags__item">
+                                <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_orange" value="{{ tag.instance.slug }}">
+                                <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
+                            </div>
+                        {% endfor %}
                     </div>
                     <span class="form__error"></span>
                 </div>
@@ -66,10 +33,10 @@
                 <div class="form__field-group">
                     <div class="form__field-group-ingredientes">
                         <div class="form__dropdown">
-                            <input type="text" id="nameIngredient" class="form__input">
+                            <input type="text" id="nameIngredient" class="form__input" name="ingredients_search">
                             <div class="form__dropdown-items"></div>
                         </div>
-                        <input type="number" id="cantidad" class="form__input" min="0">
+                        <input type="number" id="cantidad" class="form__input" min="1">
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
                     <div class="form__field-group-ingredientes-container">
@@ -82,7 +49,7 @@
             <div class="form__group">
                 <label for="id_time" class="form__label">Время приготовления</label>
                 <div class="form__field-group form__field-group_time">
-                    <input type="text" id="id_time" name="name" class="form__input">
+                    <input type="number" id="id_time" name="cooking_time_minutes" class="form__input" min="1">
                     <label for="id_time" class="form__label">минут</label>
                     <span class="form__error"></span>
                 </div>
@@ -97,7 +64,7 @@
             <div class="form__group">
                 <span class="form__label">Загрузить фото</span>
                 <div class="form__field-group">
-                    <input type="file" name="file" id="id_file">
+                    <input type="file" name="image" id="id_file" accept="image/*">
                     <span class="form__error"></span>
                 </div>
             </div>
@@ -106,22 +73,13 @@
             </div>
         </form>
     </div>
+{% endblock %}
 
 
-</main>
-<footer class="footer">
-    <div class="footer__container container">
-        <a href="#" class="footer__brand link">Продуктовый помощник</a>
-        <ul class="footer__items">
-            <li class="footer__item"><a href="#" class="footer__link link">Об авторе </a></li>
-            <li class="footer__item"><a href="#" class="footer__link link">Технологии</a></li>
-        </ul>
-    </div>
-</footer>
-<script src="{% static 'js/config/config.js' %}"></script>
-<script src="{% static 'js/components/Header.js' %}"></script>
-<script src="{% static 'js/utils/debouncing.js' %}"></script>
-<script src="{% static 'js/api/Api.js' %}"></script>
-<script src="{% static 'js/formRecipe.js' %}"></script>
-</body>
-</html>
+{% block scripts %}
+    <script src="{% static 'js/config/config.js' %}"></script>
+    <script src="{% static 'js/components/Header.js' %}"></script>
+    <script src="{% static 'js/utils/debouncing.js' %}"></script>
+    <script src="{% static 'js/api/Api.js' %}"></script>
+    <script src="{% static 'js/formRecipe.js' %}"></script>
+{% endblock %}
