--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -48,7 +48,7 @@
 </div>
 {% endblock %}
 
-{% block sctipts %}
+{% block scripts %}
   <script src="{% static 'js/components/MainCards.js' %}"></script>
   <script src="{% static 'js/components/Purchases.js' %}"></script>
   <script src="{% static 'js/components/Favorites.js' %}"></script>
