--- a/templates/includes/author_card.html
+++ b/templates/includes/author_card.html
@@ -1,6 +1,6 @@
     <div class="card-user" data-author="700">
         <div class="card-user__header">
-            <h2 class="card-user__title">{{ author.username }}</h2>
+            <h2 class="card-user__title">{{ author.get_full_name }}</h2>
         </div>
         <div class="card-user__body">
             <ul class="card-user__items">
