Make new purchase list page work

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,8 +14,8 @@
       </ul>
     {% else %}
       <ul class="nav__items list">
-        <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Рецепты</a></li>
-        <li class="nav__item nav__item_disabled"><a href="#" class="nav__link link">Список покупок</a></li>
+        <li class="nav__item nav__item_disabled"><a href="/recipes/" class="nav__link link">Рецепты</a></li>
+        <li class="nav__item nav__item_disabled"><a href="/personal/purchases/new" class="nav__link link">Список покупок</a></li>
       </ul>
       <ul class="nav__items list">
         <li class="nav__item"><a href="/personal/auth/login/" class="nav__link link">Войти</a></li>
