--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -19,7 +19,7 @@
       </ul>
       <ul class="nav__items list">
         <li class="nav__item"><a href="/personal/auth/login/" class="nav__link link">Войти</a></li>
-        <li class="nav__item"><a href="/personal/auth/registration" class="button button_style_blue">Создать аккаунт</a></li>
+        <li class="nav__item"><a href="/personal/registration" class="button button_style_blue">Создать аккаунт</a></li>
       </ul>
     {% endif %}
   </div>
