--- a/templates/subscriptions.html
+++ b/templates/subscriptions.html
@@ -2,7 +2,7 @@
 
 {% block title %}Мои подписки{% endblock %}
 {% block stylesheet %}{% load static %}{% static 'pages/myFollow.css' %}{% endblock %}
-{% block main_title %}Рецепты{% endblock %}
+{% block main_title %}Мои подписки{% endblock %}
 
 {% block main_content %}
   {% include 'includes/author_card_list.html' %}
