--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -9,7 +9,7 @@
         <li class="nav__item"><a href="/personal/purchases/new" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
       </ul>
       <ul class="nav__items list">
-        <li class="nav__item"><a href="#" class="nav__link link">Изменить пароль</a></li>
+        <li class="nav__item"><a href="/personal/auth/password_change/" class="nav__link link">Поменять пароль</a></li>
         <li class="nav__item"><a href="/personal/auth/logout/" class="nav__link link">Выход</a></li>
       </ul>
     {% else %}
