--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -19,7 +19,9 @@
                 <label for="id_password" class="form__label">Пароль</label>
                 <div class="form__field-group">
                     <input type="password" name="password" id="id_password" class="form__input">
-                    <span class="form__error"></span>
+                    {% if form.errors %}
+                    <span class="form__error">Имя пользоваетеля и пароль не совпадают.</span>
+                    {% endif %}
                 </div>
             </div>
             <div class="form__footer">
