Create password reset pages

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -4,5 +4,5 @@
 {% block stylesheet %}{% load static %}{% static 'pages/form.css' %}{% endblock %}
 
 {% block main_content %}
-  <p style="text-align: center">Пароль успешно изменён.</p>
+    <h1>Пароль изменён</h1>
 {% endblock %}
