--- a/templates/includes/tags.html
+++ b/templates/includes/tags.html
@@ -1,14 +1,8 @@
 <ul class="tags">
+  {% for tag, color in tags_and_colors.items %}
   <li class="tags__item">
-    <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="#"></a>
-    <span class="tags__label">Завтрак</span>
+    <input id="{{ tag.slug }}" class="tags__checkbox tags__checkbox_style_{{ color }} tags__checkbox_active" href="#">
+    <label for="{{ tag.slug }}" class="tags__label">{{ tag.title }}</label>
   </li>
-  <li class="tags__item">
-    <a id="lunch" class="tags__checkbox tags__checkbox_style_green tags__checkbox_active" href="#"></a>
-    <span for="lunch" class="tags__label">Обед</span>
-  </li>
-  <li class="tags__item">
-    <a id="dinner" class="tags__checkbox tags__checkbox_style_purple tags__checkbox_active" href="#"></a>
-    <label for="dinner" class="tags__label">Ужин</label>
-  </li>
+  {% endfor %}
 </ul>
