Make tags and their colors in templates dynamic

--- a/templates/includes/recipe_card.html
+++ b/templates/includes/recipe_card.html
@@ -3,9 +3,7 @@
   <div class="card__body">
     <a class="card__title link" href="/recipes/id/{{ recipe.id }}" target="_blank">{{ recipe.title }}</a>
     <ul class="card__items">
-      <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-      <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-      <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
+      {% include 'includes/recipe_tags.html' %}
     </ul>
     <div class="card__items card__items_column">
       <p class="card__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
