--- a/templates/includes/tags.html
+++ b/templates/includes/tags.html
@@ -1,7 +1,8 @@
 <ul class="tags">
+  {% load recipes_custom_filters %}
   {% for tag, color in tags_and_colors.items %}
   <li class="tags__item">
-      <a id="{{ tag.slug }}" class="tags__checkbox tags__checkbox_style_{{ color }} tags__checkbox_active" href="#"></a>
+      <a id="{{ tag.slug }}" class="tags__checkbox tags__checkbox_style_{{ tags_and_colors|dict_lookup:tag }} tags__checkbox_active" href="#"></a>
     <label for="{{ tag.slug }}" class="tags__label">{{ tag.title }}</label>
   </li>
   {% endfor %}
