--- a/templates/recipe_create.html
+++ b/templates/recipe_create.html
@@ -5,76 +5,76 @@
 {% block main_title %}Создание рецепта{% endblock %}
 
 {% block main_content %}
-    <div class="form-container">
-        <form class="form" method="post" enctype="multipart/form-data">{% csrf_token %}
-            <div class="form__group">
-                <label for="id_name" class="form__label">Название рецепта</label>
-                <div class="form__field-group">
-                    <input type="text" id="id_name" name="title" class="form__input">
-                    <span class="form__error"></span>
-                </div>
+  <div class="form-container">
+    <form class="form" method="post" enctype="multipart/form-data">{% csrf_token %}
+      <div class="form__group">
+        <label for="id_name" class="form__label">Название рецепта</label>
+        <div class="form__field-group">
+          <input type="text" id="id_name" name="title" class="form__input">
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__group">
+        <p class="form__label">Теги</p>
+        <div class="form__field-group">
+          <div class="tags">
+            {% load recipes_custom_filters %}
+            {% for tag, title in form.tags.field.choices %}
+              <div class="tags__item">
+                <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_{{ tags_and_colors|dict_lookup:tag.instance }}" value="{{ tag.instance.slug }}">
+                <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
+              </div>
+            {% endfor %}
+          </div>
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__group">
+        <label for="nameIngredient" class="form__label">Ингредиенты</label>
+        <div class="form__field-group">
+          <div class="form__field-group-ingredientes">
+            <div class="form__dropdown">
+              <input type="text" id="nameIngredient" class="form__input" name="ingredients_search">
+              <div class="form__dropdown-items"></div>
             </div>
-            <div class="form__group">
-                <p class="form__label">Теги</p>
-                <div class="form__field-group">
-                    <div class="tags">
-                        {% for tag, title in form.tags.field.choices %}
-                            <div class="tags__item">
-                                <input type="checkbox" name="tags" id="id_{{ tag.instance.slug }}" class="tags__checkbox tags__checkbox_style_orange" value="{{ tag.instance.slug }}">
-                                <label for="id_{{ tag.instance.slug }}" class="tags__label">{{ tag.instance.title }}</label>
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <label for="nameIngredient" class="form__label">Ингредиенты</label>
-                <div class="form__field-group">
-                    <div class="form__field-group-ingredientes">
-                        <div class="form__dropdown">
-                            <input type="text" id="nameIngredient" class="form__input" name="ingredients_search">
-                            <div class="form__dropdown-items"></div>
-                        </div>
-                        <input type="number" id="cantidad" class="form__input" min="1">
-                        <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
-                    </div>
-                    <div class="form__field-group-ingredientes-container">
+            <input type="number" id="cantidad" class="form__input" min="1">
+            <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
+          </div>
+          <div class="form__field-group-ingredientes-container">
 
-                    </div>
-                    <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <label for="id_time" class="form__label">Время приготовления</label>
-                <div class="form__field-group form__field-group_time">
-                    <input type="number" id="id_time" name="cooking_time_minutes" class="form__input" min="1">
-                    <label for="id_time" class="form__label">минут</label>
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <label for="id_description" class="form__label">Описание</label>
-                <div class="form__field-group">
-                    <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__group">
-                <span class="form__label">Загрузить фото</span>
-                <div class="form__field-group">
-                    <input type="file" name="image" id="id_file" accept="image/*">
-                    <span class="form__error"></span>
-                </div>
-            </div>
-            <div class="form__footer">
-                <button class="button button_style_blue">Создать рецепт</button>
-            </div>
-        </form>
-    </div>
+          </div>
+          <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__group">
+        <label for="id_time" class="form__label">Время приготовления</label>
+        <div class="form__field-group form__field-group_time">
+          <input type="number" id="id_time" name="cooking_time_minutes" class="form__input" min="1">
+          <label for="id_time" class="form__label">минут</label>
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__group">
+        <label for="id_description" class="form__label">Описание</label>
+        <div class="form__field-group">
+          <textarea name="description" id="id_description" rows="8" class="form__textarea"></textarea>
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__group">
+        <span class="form__label">Загрузить фото</span>
+        <div class="form__field-group">
+          <input type="file" name="image" id="id_file" accept="image/*">
+          <span class="form__error"></span>
+        </div>
+      </div>
+      <div class="form__footer">
+        <button class="button button_style_blue">Создать рецепт</button>
+      </div>
+    </form>
+  </div>
 {% endblock %}
-
 
 {% block scripts %}
     <script src="{% static 'js/config/config.js' %}"></script>
