Created new purchase list recipes counter

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
   <header class="header">
-    {% include 'includes/header.html' %}
+    {% include 'includes/nav.html' %}
   </header>
 
   <main class="main container">
