--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -3,9 +3,9 @@
   <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
       {% if page_obj.has_previous %}
-        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"><span class="icon-left"></span></a></li>
+        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.previous_page_number }}"><span class="icon-left-active"></span></a></li>
       {% else %}
-        <li class="pagination__item"><a class="pagination__link link"><span class="icon-left"></span></a></li>
+        <li class="pagination__item"><a class="pagination__link link"><span class="icon-left-inactive"></span></a></li>
       {% endif %}
       {% for q in paginator.page_range %}
         {% if q == page_obj.number %}
@@ -15,9 +15,9 @@
         {% endif %}
       {% endfor %}
       {% if page_obj.has_next %}
-        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"><span class="icon-right"></span></a></li>
+        <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"><span class="icon-right-active"></span></a></li>
       {% else %}
-        <li class="pagination__item"><a class="pagination__link link"><span class="icon-right"></span></a></li>
+        <li class="pagination__item"><a class="pagination__link link"><span class="icon-right-inactive"></span></a></li>
       {% endif %}
     </ul>
   </nav>
