--- a/templates/includes/paginator.html
+++ b/templates/includes/paginator.html
@@ -7,13 +7,19 @@
       {% else %}
         <li class="pagination__item"><a class="pagination__link link"><span class="icon-left-inactive"></span></a></li>
       {% endif %}
-      {% for q in paginator.page_range %}
-        {% if q == page_obj.number %}
-          <li class="pagination__item pagination__item_active"><a class="pagination__link link" href="#">{{ q }}</a></li>
-        {% else %}
-          <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ q }}">{{ q }}</a></li>
-        {% endif %}
-      {% endfor %}
+
+      {% if page_obj.number > 3 %}
+          {% include 'includes/pagination_item.html' with slice_range=":1" %}
+          <li class="pagination__item"><p>...</p></li>
+      {% endif %}
+
+      {% include 'includes/pagination_item.html' with slice_range=paginator.num_pages|get_slice_range:page_obj.number %}
+
+      {% if page_obj.number < paginator.page_range|list_lookup:-3 %}
+          <li class="pagination__item"><p>...</p></li>
+          {% include 'includes/pagination_item.html' with slice_range="-1:" %}
+      {% endif %}
+
       {% if page_obj.has_next %}
         <li class="pagination__item"><a class="pagination__link link" href="?{% if request.GET.tags %}{% for slug in request|parse_url_tags_query %}tags={{ slug }}&{% endfor %}{% endif %}page={{ page_obj.next_page_number }}"><span class="icon-right-active"></span></a></li>
       {% else %}
