--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -18,5 +18,20 @@
       <a href="https://www.django-rest-framework.org/" target="_blank" class="nav__link link">Django REST Framework</a>
       <span style="color: lightgrey"> версия 3.12.2</span>
     </li>
-  </ul>
+    <li>
+      <a href="#" target="_blank" class="nav__link link">Gunicorn</a>
+      <span style="color: lightgrey"></span>
+    </li>
+    <li>
+      <a href="#" target="_blank" class="nav__link link">PostgreSQL</a>
+      <span style="color: lightgrey"></span>
+    </li>
+    <li>
+      <a href="#" target="_blank" class="nav__link link">Nginx</a>
+      <span style="color: lightgrey"></span>
+    </li>
+    <li>
+      <a href="#" target="_blank" class="nav__link link">Docker</a>
+      <span style="color: lightgrey"></span>
+    </li>
 {% endblock %}
