Implement favourites API

--- a/templates/includes/recipe_card.html
+++ b/templates/includes/recipe_card.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" data-id="{{ recipe.id }}">{% csrf_token %}
   <a href="/recipes/id/{{ recipe.id }}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
   <div class="card__body">
     <a class="card__title link" href="/recipes/id/{{ recipe.id }}" target="_blank">{{ recipe.title }}</a>
@@ -12,6 +12,9 @@
   </div>
   <div class="card__footer">
     <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-    <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+    {% if user.is_authenticated %}
+      <button class="button button_style_none" name="favorites" {% if recipe not in request_user_favourites %}data-out{% endif %}>
+      <span class="icon-favorite {% if recipe in request_user_favourites %}icon-favorite_active{% endif %}"></span></button>
+    {% endif %}
   </div>
 </div>
