--- a/templates/includes/recipe_card.html
+++ b/templates/includes/recipe_card.html
@@ -14,8 +14,8 @@
   <div class="card__footer">
     <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
     {% if user.is_authenticated %}
-      <button class="button button_style_none" name="favorites" {% if not request|request_user_favourites:recipe %}data-out{% endif %}>
-      <span class="icon-favorite {% if request|request_user_favourites:recipe %}icon-favorite_active{% endif %}"></span></button>
+      <button class="button button_style_none" name="favorites" {% if not request|request_user_favorites:recipe %}data-out{% endif %}>
+      <span class="icon-favorite {% if request|request_user_favorites:recipe %}icon-favorite_active{% endif %}"></span></button>
     {% endif %}
   </div>
 </div>
