Implemented purchases button

--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -16,9 +16,10 @@
         </li>
         <li class="nav__item {% if request.resolver_match.url_name == 'new_purchase_list' %} nav__item_active{% endif %}">
           <a href="{% url 'new_purchase_list' %}" class="nav__link link">Список покупок</a>
-          {% if user.new_purchase_list.recipes.count %}
-            <span class="badge badge_style_blue nav__badge" id="counter">{{ user.new_purchase_list.recipes.count }}</span>
-          {% endif %}
+            <span
+                class="badge badge_style_blue nav__badge" id="counter"
+                style="visibility: {% if user.new_purchase_list.recipes.count %}visible{% else %}hidden{% endif %}"
+            >{{ user.new_purchase_list.recipes.count }}</span>
         </li>
       </ul>
       <ul class="nav__items list">
@@ -27,7 +28,9 @@
       </ul>
     {% else %}
       <ul class="nav__items list">
-        <li class="nav__item nav__item_active"><a href="{% url 'recipe_list' %}" class="nav__link link">Рецепты</a></li>
+        <li class="nav__item {% if request.resolver_match.url_name == 'recipe_list' %} nav__item_active{% endif %}">
+          <a href="{% url 'recipe_list' %}" class="nav__link link">Рецепты</a>
+        </li>
         <li class="nav__item nav__item_disabled"><a href="{% url 'new_purchase_list' %}" class="nav__link link">Список покупок</a></li>
       </ul>
       <ul class="nav__items list">
