--- a/templates/includes/recipe_card.html
+++ b/templates/includes/recipe_card.html
@@ -12,8 +12,10 @@
     </div>
   </div>
   <div class="card__footer">
-    <button class="button button_style_light-blue" name="purchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
     {% if user.is_authenticated %}
+      <button class="button button_style_light-blue{% if request|request_user_purchases:recipe %}-outline{% endif %}" name="purchases" {% if not request|request_user_purchases:recipe %}data-out{% endif %}>
+        {% if request|request_user_purchases:recipe %}<span class="icon-check button__icon"></span>Рецепт добавлен{% else %}<span class="icon-plus button__icon"></span>Добавить в покупки{% endif %}
+      </button>
       <button class="button button_style_none" name="favorites" {% if not request|request_user_favorites:recipe %}data-out{% endif %}>
       <span class="icon-favorite {% if request|request_user_favorites:recipe %}icon-favorite_active{% endif %}"></span></button>
     {% endif %}
