--- a/templates/includes/author_card.html
+++ b/templates/includes/author_card.html
@@ -7,7 +7,7 @@
       {% for recipe in author.recipes.all|slice:":3" %}
         <li class="card-user__item">
           <div class="recipe">
-            <img src="{{ recipe.image.url }}" alt="какой-то-текст" class="recipe__image">
+            <a href="{% url 'recipe_detail' recipe.id %}" style="grid-area: image"><img href="{% url 'recipe_detail' recipe.id %}" src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image"></a>
             <h3 class="recipe__title"><a href="{% url 'recipe_detail' recipe.id %}" class="nav__link link">{{ recipe.title }}</a></h3>
             <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
           </div>
