--- a/templates/includes/recipe_card.html
+++ b/templates/includes/recipe_card.html
@@ -1,8 +1,8 @@
 {% load recipes_custom_filters %}
 <div class="card" data-id="{{ recipe.id }}">{% csrf_token %}
-  <a href="{% url 'recipe_detail' recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
+  <a href="{% url 'recipe_detail' recipe.id %}" class="link"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
   <div class="card__body">
-    <a class="card__title link" href="{% url 'recipe_detail' recipe.id %}" target="_blank">{{ recipe.title }}</a>
+    <a class="card__title link" href="{% url 'recipe_detail' recipe.id %}">{{ recipe.title }}</a>
     <ul class="card__items">
       {% include 'includes/recipe_tags.html' %}
     </ul>
