--- a/templates/users/purchases.html
+++ b/templates/users/purchases.html
@@ -4,15 +4,15 @@
 {% block stylesheet %}{% load static %}{% static 'pages/shopList.css' %}{% endblock %}
 {% block main_title %}Список покупок{% endblock %}
 
-{% block main_content %}
+{% block main_content %}{% csrf_token %}
   <div class="card-list card-list_column">
     <ul class="shopping-list">
-      {% for recipe in user.new_purchase_list.recipes.all %}
-        <li class="shopping-list__item" data-id="{{ recipe.id }}">
+      {% for purchase in user.recipes_in_purchase_list.all %}
+        <li class="shopping-list__item" data-id="{{ purchase.recipe.id }}">
           <div class="recipe recipe_reverse">
-            <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image recipe__image_big">
-            <h3 class="recipe__title">{{ recipe.title }}</h3>
-            <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
+            <a href="{% url 'recipe_detail' purchase.recipe.id %}" style="grid-area: image"><img href="{% url 'recipe_detail' purchase.recipe.id %}" src="{{ purchase.recipe.image.url }}" alt="{{ purchase.recipe.title }}" class="recipe__image recipe__image_big"></a>
+            <h3 class="recipe__title"><a href="{% url 'recipe_detail' purchase.recipe.id %}" class="nav__link link">{{ purchase.recipe.title }}</a></h3>
+            <p class="recipe__text"><span class="icon-time"></span> {{ purchase.recipe.cooking_time_minutes }} мин.</p>
           </div>
           <a href="#" class="shopping-list__button link">Удалить</a>
         </li>
