Implemanted purchase list file download

--- a/templates/users/purchases.html
+++ b/templates/users/purchases.html
@@ -20,7 +20,7 @@
         <div>Данный список пуст.</div>
       {% endfor %}
     </ul>
-    <a href="#"><button class="button button_style_blue">Скачать список</button></a>
+    <a href="{% url 'download_purchases' %}"><button class="button button_style_blue">Скачать список</button></a>
   </div>
 {% endblock %}
 
