--- a/templates/includes/author_card_list.html
+++ b/templates/includes/author_card_list.html
@@ -1,5 +1,5 @@
 <div class="card-list">
-  {% for author in object_list %}
+  {% for subscription in object_list %}
       {% include 'includes/author_card.html' %}
   {% empty %}
     <div>Данный список пуст.</div>
