--- a/templates/includes/author_card.html
+++ b/templates/includes/author_card.html
@@ -1,20 +1,23 @@
-<div class="card-user" data-author="{{ author.id }}">{% csrf_token %}
+<div class="card-user" data-author="{{ subscription.author.id }}">{% csrf_token %}
   <div class="card-user__header">
-    <h1 class="card-user__title"><a href="{% url 'profile' author.username %}" class="card__title link" style="color: black">{{ author.get_full_name }}</a></h1>
+    <h1 class="card-user__title"><a href="{% url 'profile' subscription.author.username %}" class="card__title link" style="color: black">{{ subscription.author.get_full_name }}</a></h1>
   </div>
   <div class="card-user__body">
     <ul class="card-user__items">
-      {% for recipe in author.recipes.all|slice:":3" %}
+      {% for recipe in subscription.author.recipes.all|slice:":3" %}
         <li class="card-user__item">
           <div class="recipe">
             <a href="{% url 'recipe_detail' recipe.id %}" style="grid-area: image"><img href="{% url 'recipe_detail' recipe.id %}" src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image"></a>
             <h3 class="recipe__title"><a href="{% url 'recipe_detail' recipe.id %}" class="nav__link link">{{ recipe.title }}</a></h3>
             <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cooking_time_minutes }} мин.</p>
           </div>
+        </li>
       {% endfor %}
-      <li class="card-user__item">
-        <a href="{% url 'profile' author.username %}" class="card-user__link link">Еще {{ author.recipes.all|slice:"3:"|length }} рецептов...</a>
-      </li>
+        <li class="card-user__item">
+          {% if subscription.author.recipes.all|length > 3 %}
+            <a href="{% url 'profile' subscription.author.username %}" class="card-user__link link">Еще {{ subscription.author.recipes.all|slice:"3:"|length }} рецептов...</a>
+          {% endif %}
+        </li>
     </ul>
   </div>
   <div class="card-user__footer">
