--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -6,5 +6,5 @@
 {% block main_content %}
   <h1>Восстановление пароля завершено</h1>
   <p>Ваш пароль был сохранен. Теперь Вы можете войти.</p>
-  <p><a href="/personal/auth/login/">Войти</a></p>
+  <p><a href="{% url 'login' %}">Войти</a></p>
 {% endblock %}
