--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -3,39 +3,39 @@
     {% if user.is_authenticated %}
       <ul class="nav__items list">
         <li class="nav__item {% if request.resolver_match.url_name == 'recipe_list' %} nav__item_active{% endif %}">
-          <a href="{% url 'recipe_list' %}" class="nav__link link">Рецепты</a>
+          <a href="{% url 'recipes:recipe_list' %}" class="nav__link link">Рецепты</a>
         </li>
-        <li class="nav__item {% if request.resolver_match.url_name == 'subscriptions' %} nav__item_active{% endif %}">
-          <a href="{% url 'subscriptions' %}" class="nav__link link">Мои подписки</a>
+        <li class="nav__item {% if request.resolver_match.url_name == 'subscription_list' %} nav__item_active{% endif %}">
+          <a href="{% url 'users:subscription_list' %}" class="nav__link link">Мои подписки</a>
         </li>
         <li class="nav__item {% if request.resolver_match.url_name == 'recipe_create' %} nav__item_active{% endif %}">
-          <a href="{% url 'recipe_create' %}" class="nav__link link">Создать рецепт</a>
+          <a href="{% url 'recipes:recipe_create' %}" class="nav__link link">Создать рецепт</a>
         </li>
-        <li class="nav__item {% if request.resolver_match.url_name == 'favorites' %} nav__item_active{% endif %}">
-          <a href="{% url 'favorites' %}" class="nav__link link">Избранное</a>
+        <li class="nav__item {% if request.resolver_match.url_name == 'favorite_list' %} nav__item_active{% endif %}">
+          <a href="{% url 'users:favorite_list' %}" class="nav__link link">Избранное</a>
         </li>
-        <li class="nav__item {% if request.resolver_match.url_name == 'purchases' %} nav__item_active{% endif %}">
-          <a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a>
+        <li class="nav__item {% if request.resolver_match.url_name == 'purchase_list' %} nav__item_active{% endif %}">
+          <a href="{% url 'users:purchase_list' %}" class="nav__link link">Список покупок</a>
             <span
                 class="badge badge_style_blue nav__badge" id="counter"
             >{% if user.purchases.count %}{{ user.purchases.count }}{% endif %}</span>
         </li>
       </ul>
       <ul class="nav__items list">
-        <li class="nav__item"><a href="{% url 'profile' user.username %}" class="nav__link link" style="color: #4A61DD">{{ user.get_full_name }}</a></li>
+        <li class="nav__item"><a href="{% url 'recipes:author_recipe_list' user.username %}" class="nav__link link" style="color: #4A61DD">{{ user.get_full_name }}</a></li>
         <li class="nav__item"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
         <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
       </ul>
     {% else %}
       <ul class="nav__items list">
         <li class="nav__item {% if request.resolver_match.url_name == 'recipe_list' %} nav__item_active{% endif %}">
-          <a href="{% url 'recipe_list' %}" class="nav__link link">Рецепты</a>
+          <a href="{% url 'recipes:recipe_list' %}" class="nav__link link">Рецепты</a>
         </li>
-        <li class="nav__item nav__item_disabled"><a href="{% url 'purchases' %}" class="nav__link link">Список покупок</a></li>
+        <li class="nav__item nav__item_disabled"><a href="{% url 'users:purchase_list' %}" class="nav__link link">Список покупок</a></li>
       </ul>
       <ul class="nav__items list">
         <li class="nav__item"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
-        <li class="nav__item"><a href="{% url 'registration' %}" class="button button_style_blue">Создать аккаунт</a></li>
+        <li class="nav__item"><a href="{% url 'users:registration' %}" class="button button_style_blue">Создать аккаунт</a></li>
       </ul>
     {% endif %}
   </div>
