--- a/templates/recipes/recipe_confirm_delete.html
+++ b/templates/recipes/recipe_confirm_delete.html
@@ -8,7 +8,7 @@
     <p class="custom-text-block">Удалить рецепт {{ object }}?</p>
     <div class="custom-button-block">
       <form method="post">{% csrf_token %}
-        <button type="submit" class="button button_style_blue">Удалить</button><a style="margin-left: 2.5em" href="{% url 'recipe_update' object.id %}" class="nav__link link">Отмена</a>
+        <button type="submit" class="button button_style_blue">Удалить</button><a style="margin-left: 2.5em" href="{% url 'recipes:recipe_update' object.id %}" class="nav__link link">Отмена</a>
       </form>
     </div>
   </div>
