--- a/templates/recipes/recipe_list.html
+++ b/templates/recipes/recipe_list.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
-{% block title %}{% if request.resolver_match.url_name == 'profile' %}{{ author.get_full_name }} | {% endif %}Рецепты{% endblock %}
+{% block title %}{% if request.resolver_match.url_name == 'author_recipe_list' %}{{ author.get_full_name }} | {% endif %}Рецепты{% endblock %}
 {% block stylesheet %}{% load static %}{% static 'pages/index.css' %}{% endblock %}
-{% block main_title %}{% if request.resolver_match.url_name == 'profile' %}{{ author.get_full_name }}{% else %}Рецепты{% endif %}{% endblock %}
+{% block main_title %}{% if request.resolver_match.url_name == 'author_recipe_list' %}{{ author.get_full_name }}{% else %}Рецепты{% endif %}{% endblock %}
 {% block main_header %}{% include 'includes/tags.html' %}{% endblock %}
 
 {% block main_content %}
-  {% if request.resolver_match.url_name == 'profile' %}
+  {% if request.resolver_match.url_name == 'author_recie_list' %}
     <div class="author-subscribe" data-author="{{ author.id }}">
       <p style="padding: 0 0 2em 0;">{% include 'includes/subscription_button.html' %}</p>
     </div>
@@ -25,7 +25,7 @@
   <script src="{% static 'js/components/Header.js' %}"></script>
   <script src="{% static 'js/config/config.js' %}"></script>
   <script src="{% static 'js/api/Api.js' %}"></script>
-  {% if request.resolver_match.url_name == 'profile' %}
+  {% if request.resolver_match.url_name == 'author_recipe_list' %}
     <script src="{% static 'js/components/AuthorRecipe.js' %}"></script>
     <script src="{% static 'js/authorRecipe.js' %}"></script>
   {% else %}
