Change Tag model verbose names

--- a/templates/recipes/recipe_form.html
+++ b/templates/recipes/recipe_form.html
@@ -83,7 +83,7 @@
       <div class="form__footer">
         {% if request.resolver_match.url_name == 'recipe_create' %}
           <button class="button button_style_blue">Создать рецепт</button>
-        {% else %}
+        {% elif request.resolver_match.url_name == 'recipe_update' or request.resolver_match.url_name == 'recipe_delete' %}
           <button class="button button_style_blue">Сохранить</button><a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="form__ingredient-link">Удалить</a>
         {% endif %}
       </div>
