--- a/templates/recipes/recipe_form.html
+++ b/templates/recipes/recipe_form.html
@@ -43,11 +43,11 @@
           <div class="form__field-group-ingredientes-container">
             {% for item in recipe.ingredientinrecipe_set.all %}
               <div class="form__field-item-ingredient" id="ing_{{ forloop.counter }}">
-                <span> {{ item.ingredient.title }} {{ item.quantity }}{{ item.ingredient.dimension_unit }}</span>
+                <span> {{ item.ingredient.title }} {{ item.quantity }}{{ item.ingredient.dimension }}</span>
                 <span class="form__field-item-delete"></span>
                 <input id="nameIngredient_{{ forloop.counter }}" name="nameIngredient_{{ forloop.counter }}" type="hidden" value="{{ item.ingredient.title }}">
                 <input id="valueIngredient_{{ forloop.counter }}" name="valueIngredient_{{ forloop.counter }}" type="hidden" value="{{ item.quantity }}">
-                <input id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient_{{ forloop.counter }}" type="hidden" value="{{ item.ingredient.dimension_unit }}">
+                <input id="unitsIngredient_{{ forloop.counter }}" name="unitsIngredient_{{ forloop.counter }}" type="hidden" value="{{ item.ingredient.dimension }}">
               </div>
             {% endfor %}
           </div>
